--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,6 +12,7 @@ h2 {
   border: 1px solid #ccc;
   background-color: #f0f0f0;
   padding: 0 1em 0.75em 1em;
+  display: none; /* initial state for toggle */
 }
 
 .container textarea {
