--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -57,7 +57,7 @@ main {
 
 .tweet header {
   background-color: #d8d8d8;
-  border-radius: 5px 5px 0px 0px;
+  border-radius: 5px 5px 0 0;
   padding: 0.5em;
   height: 4em;
 }
@@ -67,8 +67,8 @@ main {
   border-radius: 5px;
   height: 3em;
   width: 3em;
-  display:flex; /* flexbox for vertical alignment */
-  align-items: center; /* vertical */
+  display: flex;
+  align-items: center;
 }
 
 .tweet .user-full-name {
@@ -92,8 +92,8 @@ main {
 .tweet footer {
   font-size: 0.6em;
   padding: 0 1em 0 1em;
-  display: flex; /* flexbox for vertical alignment */
-  align-items: center; /* vertical */
+  display: flex;
+  align-items: center;
   justify-content: space-between; /* allows right alignment of images */
   height: 3em;
 }
